Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69494

Font don't display properly on Oneplus 3 5 and 6 Devices

XMLWordPrintable

    • Android

      Fonts do not look right on the OnePlus devices.

      No matter what i try the font on OnePlus devices comes out very weird, other apps on the phone look fine, the only app effected seem my app made in QT, other phones i have tried so far are not effected other than OnePlus, see pictures to see the difference, numbers are very thin, and all letters are capital style. On other phones everything looks right.

        1. AA2_OnePlus.jpg
          164 kB
          André Klitzing
        2. AA2_Other.jpg
          201 kB
          André Klitzing
        3. bug.png
          38 kB
          Fabien Chéreau
        4. bugcapitalized.zip
          261 kB
          Fabien Chéreau
        5. coming_soon_font.png
          30 kB
          Tapio Oksa
        6. fonts_are_broken.png
          40 kB
          Tapio Oksa
        7. fonts_are_not_broken.png
          35 kB
          Tapio Oksa
        8. fonts.tar.gz
          3.14 MB
          André Klitzing
        9. Oneplus.jpg
          156 kB
          Luca Toniolo
        10. OnePlusA500_roboto_subsets.png
          21 kB
          Tapio Oksa
        11. Other Device.jpg
          33 kB
          Luca Toniolo
        12. roboto_black_subset_vs_roboto_black.png
          89 kB
          Tapio Oksa
        13. ubuntu_font_manager.png
          44 kB
          Tapio Oksa
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtandroidteam Qt Android Team
            gradixximo Luca Toniolo
            Votes:
            11 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes